add link imagems

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
             <a href="https://www.youtube.com/watch?v=UrfmYKfGlyQ">
                 <img src="https://img.youtube.com/vi/UrfmYKfGlyQ/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=_6Vj-GlR2_Y>
-                <img src="https://img.youtube.com/vi/_6Vj-GlR2_Y/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=BRbub42opug>
+                <img src="https://img.youtube.com/vi/BRbub42opug/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
-                <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=9Yq4YVzytqM">
+                <img src="https://img.youtube.com/vi/9Yq4YVzytqM/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
-                <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=_WSnFKivKhY">
+                <img src="https://img.youtube.com/vi/_WSnFKivKhY/maxresdefault.jpg" />
             </a>
         </div>
     </section>
